revert to previous corner colors, and fix corner draggability on ios 5

--- a/src/client/dogo.styl
+++ b/src/client/dogo.styl
@@ -85,7 +85,7 @@ body
 		border-bottom 1px solid rgba(0, 0, 0, .25);
 		box-shadow 0 1px 2px rgba(0, 0, 0, .7);
 	.corner.active
-		cornerActive()
+		background cornerActive
 	.corner.left
 		absolute top 0 left 0;
 		border-right 1px solid rgba(255,255,255, .05);
