--- a/src/style/colors.styl
+++ b/src/style/colors.styl
@@ -1,12 +1,13 @@
-buttonFrom = #2AA7FF
-buttonTo = lighten(#004399, 10%)
+buttonFrom = #227EBF
+buttonTo = #025E9F
 buttonBoxShadow = #142C71
 buttonTextShadow = #6993AA
 secondaryButton = #00C6E2
 secondaryButtonBoxShadow = #0080C0
 
-cornerActive()
-	background lighten(buttonTo, 5%)
+cornerFrom = lighten(buttonFrom, 10%)
+cornerTo = lighten(buttonTo, 10%)
+cornerActive = lighten(buttonTo, 5%)
 
 textBorderBase = #1A84BB
 textBorder1 = darken(textBorderBase, 20%)
